$Id: History,v 1.218 2003-02-17 07:19:37 stanaka Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     *************************************************************
     * Note that modeling and test have their own History files. *
     *************************************************************

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization category
---------------------------------------

17th February 2003 Satoshi Tanaka (vis-V05-00-01)
- A Small bug fixing of VRML2 driver 
 (Explicit cast from G4String to char* in G4VRML2SceneHandlerFunc.icc).

24th January 2003  Joseph Perl
- Fixes to HepRep - see History file.

20th January 2003  John Allison  (vis-V05-00-00, co-works intercoms-V05-00-00)
- Incorporated openinventor-V05-00-00: Removed erroneous additional
  transformation.
- Added G4VisManager::Draw methods for hits and trajectories.

11th December 2002  John Allison  (vis-V04-01-10)
- Fix for SUN-CC warnings: AddThis hides the virtual function...
- Fix memory leak in RayTracer.
- Fixed /vis/scene/add/trajectories command.
- Some fixes in HepRep.

4th December 2002  Makoto Asai (vis-V04-01-09)
- Migration to new G4ApplicationState

27th November 2002  John Allison  (vis-V04-01-08)